[tool.poetry]
name = "sqlite3-lsd"
version = "0.1.0"
description = ""
authors = ["zztkm <takumi.basket1682@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sqlite3_lsd"}]

[tool.poetry.dependencies]
python = "^3.11"
levenshtein = "^0.20.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
